added javax.annotations dep

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -36,12 +36,13 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <swagger-annotations.version>1.6.8</swagger-annotations.version>
-        <openapi-generator.version>6.6.0</openapi-generator.version>
-        <jackson-databind-nullable.version>0.2.6</jackson-databind-nullable.version>
-        <jakarta-annotation.version>2.1.0</jakarta-annotation.version>
+        <openapi-generator.version>6.4.0</openapi-generator.version>
+        <spring-web.version>5.3.23</spring-web.version>
+        <spring-retry.version>1.3.3</spring-retry.version>
+        <jackson-databind-nullable.version>0.2.3</jackson-databind-nullable.version>
+        <jakarta-annotation.version>1.3.5</jakarta-annotation.version>
         <jsr305.version>3.0.2</jsr305.version>
         <junit.version>4.13.2</junit.version>
-        <com.github.jknack.handlebars.version>4.3.1</com.github.jknack.handlebars.version>
     </properties>
 
     <dependencies>
@@ -62,6 +63,12 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
         <!-- Swagger annotations -->
         <dependency>
             <groupId>io.swagger</groupId>
@@ -76,10 +83,23 @@
             <version>${jsr305.version}</version>
         </dependency>
 
-        <!-- Apache HTTP Client -->
+        <!-- HTTP client: Spring RestTemplate -->
         <dependency>
-            <groupId>org.apache.httpcomponents.client5</groupId>
-            <artifactId>httpclient5</artifactId>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring-web.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring-web.version}</version>
+        </dependency>
+
+        <!-- Spring Retry -->
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+            <version>${spring-retry.version}</version>
         </dependency>
 
         <!-- JSON processing: Jackson -->
@@ -119,16 +139,6 @@
             <version>${jakarta-annotation.version}</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>com.github.jknack</groupId>
-            <artifactId>handlebars</artifactId>
-            <version>${com.github.jknack.handlebars.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.jknack</groupId>
-            <artifactId>handlebars-jackson2</artifactId>
-            <version>${com.github.jknack.handlebars.version}</version>
-        </dependency>
 
         <dependency>
             <groupId>org.openapitools</groupId>
@@ -148,8 +158,8 @@
                     <artifactId>commons-text</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpclient</artifactId>
+                    <groupId>com.github.jknack</groupId>
+                    <artifactId>handlebars</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -165,19 +175,6 @@
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
                 <version>${openapi-generator.version}</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.openapitools</groupId>
-                        <artifactId>openapi-generator</artifactId>
-                        <version>${openapi-generator.version}</version>
-                        <exclusions>
-                            <exclusion>
-                                <groupId>org.apache.httpcomponents</groupId>
-                                <artifactId>httpclient</artifactId>
-                            </exclusion>
-                        </exclusions>
-                    </dependency>
-                </dependencies>
                 <executions>
                     <execution>
                         <goals>
@@ -193,7 +190,7 @@
                             <generateModelTests>false</generateModelTests>
                             <generateApiTests>false</generateApiTests>
                             <templateDirectory>src/main/resources/custom_templates</templateDirectory>
-                            <library>apache-httpclient</library>
+                            <library>resttemplate</library>
                         </configuration>
                     </execution>
                 </executions>
@@ -215,9 +212,11 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- https://github.com/OpenAPITools/openapi-generator/issues/3272 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <!--                <version>3.1.1</version>-->
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -228,6 +227,7 @@
                 </executions>
                 <configuration>
                     <source>8</source>
+                    <!--                    <doclint>none</doclint>-->
                     <tags>
                         <tag>
                             <name>http.response.details</name>
@@ -248,11 +248,6 @@
                     <plugin>
                         <groupId>com.github.siom79.japicmp</groupId>
                         <artifactId>japicmp-maven-plugin</artifactId>
-                        <configuration>
-                            <parameter>
-                                <ignoreMissingClasses>true</ignoreMissingClasses>
-                            </parameter>
-                        </configuration>
                         <executions>
                             <execution>
                                 <id>japicmp</id>
