--- a/api/pom.xml
+++ b/api/pom.xml
@@ -39,10 +39,11 @@
         <openapi-generator.version>6.4.0</openapi-generator.version>
         <spring-web.version>5.3.23</spring-web.version>
         <spring-retry.version>1.3.3</spring-retry.version>
-        <jackson-databind-nullable.version>0.2.3</jackson-databind-nullable.version>
-        <jakarta-annotation.version>1.3.5</jakarta-annotation.version>
+        <jackson-databind-nullable.version>0.2.6</jackson-databind-nullable.version>
+        <jakarta-annotation.version>2.1.1</jakarta-annotation.version>
         <jsr305.version>3.0.2</jsr305.version>
         <junit.version>4.13.2</junit.version>
+        <com.github.jknack.handlebars.version>4.3.1</com.github.jknack.handlebars.version>
     </properties>
 
     <dependencies>
@@ -83,23 +84,10 @@
             <version>${jsr305.version}</version>
         </dependency>
 
-        <!-- HTTP client: Spring RestTemplate -->
+        <!-- Apache Http Client 5 -->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>${spring-web.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>${spring-web.version}</version>
-        </dependency>
-
-        <!-- Spring Retry -->
-        <dependency>
-            <groupId>org.springframework.retry</groupId>
-            <artifactId>spring-retry</artifactId>
-            <version>${spring-retry.version}</version>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
         </dependency>
 
         <!-- JSON processing: Jackson -->
@@ -139,6 +127,16 @@
             <version>${jakarta-annotation.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.jknack</groupId>
+            <artifactId>handlebars</artifactId>
+            <version>${com.github.jknack.handlebars.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.jknack</groupId>
+            <artifactId>handlebars-jackson2</artifactId>
+            <version>${com.github.jknack.handlebars.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.openapitools</groupId>
@@ -161,6 +159,10 @@
                     <groupId>com.github.jknack</groupId>
                     <artifactId>handlebars</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.apache.httpcomponents</groupId>
+                    <artifactId>httpclient</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
     </dependencies>
@@ -175,6 +177,19 @@
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
                 <version>${openapi-generator.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.openapitools</groupId>
+                        <artifactId>openapi-generator</artifactId>
+                        <version>${openapi-generator.version}</version>
+                        <exclusions>
+                            <exclusion>
+                                <groupId>org.apache.httpcomponents</groupId>
+                                <artifactId>httpclient</artifactId>
+                            </exclusion>
+                        </exclusions>
+                    </dependency>
+                </dependencies>
                 <executions>
                     <execution>
                         <goals>
@@ -190,7 +205,7 @@
                             <generateModelTests>false</generateModelTests>
                             <generateApiTests>false</generateApiTests>
                             <templateDirectory>src/main/resources/custom_templates</templateDirectory>
-                            <library>resttemplate</library>
+                            <library>apache-httpclient</library>
                         </configuration>
                     </execution>
                 </executions>
@@ -212,11 +227,9 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- https://github.com/OpenAPITools/openapi-generator/issues/3272 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <!--                <version>3.1.1</version>-->
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -227,7 +240,6 @@
                 </executions>
                 <configuration>
                     <source>8</source>
-                    <!--                    <doclint>none</doclint>-->
                     <tags>
                         <tag>
                             <name>http.response.details</name>
@@ -248,6 +260,11 @@
                     <plugin>
                         <groupId>com.github.siom79.japicmp</groupId>
                         <artifactId>japicmp-maven-plugin</artifactId>
+                        <configuration>
+                            <parameter>
+                                <ignoreMissingClasses>true</ignoreMissingClasses>
+                            </parameter>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>japicmp</id>
