--- a/pom.xml
+++ b/pom.xml
@@ -34,11 +34,12 @@
     <inceptionYear>2017</inceptionYear>
 
     <properties>
-        <jackson.version>2.15.1</jackson.version>
+        <jackson.version>2.15.2</jackson.version>
         <snakeyaml.version>2.0</snakeyaml.version>
         <bouncycastle.version>1.70</bouncycastle.version>
         <jjwt.version>0.11.5</jjwt.version>
-        <okta.sdk.previousVersion>10.2.2</okta.sdk.previousVersion>
+        <org.apache.httpcomponents.client5.version>5.2.1</org.apache.httpcomponents.client5.version>
+        <okta.sdk.previousVersion>10.3.0</okta.sdk.previousVersion>
         <okta.commons.version>1.3.3</okta.commons.version>
         <github.slug>okta/okta-sdk-java</github.slug>
     </properties>
@@ -125,7 +126,7 @@
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
-                <version>1.2.11</version>
+                <version>1.3.4</version>
             </dependency>
 
             <!-- Bouncy Castle -->
@@ -161,6 +162,12 @@
             </dependency>
 
             <dependency>
+                <groupId>org.apache.httpcomponents.client5</groupId>
+                <artifactId>httpclient5</artifactId>
+                <version>${org.apache.httpcomponents.client5.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.yaml</groupId>
                 <artifactId>snakeyaml</artifactId>
                 <version>${snakeyaml.version}</version>
@@ -168,7 +175,7 @@
             <dependency>
                 <groupId>com.google.auto.service</groupId>
                 <artifactId>auto-service</artifactId>
-                <version>1.0.1</version>
+                <version>1.1.0</version>
                 <optional>true</optional>
             </dependency>
 
@@ -272,7 +279,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>versions-maven-plugin</artifactId>
-                    <version>2.11.0</version>
+                    <version>2.15.0</version>
                     <configuration>
                         <generateBackupPoms>false</generateBackupPoms>
                     </configuration>
@@ -280,7 +287,7 @@
                 <plugin>
                     <groupId>com.github.siom79.japicmp</groupId>
                     <artifactId>japicmp-maven-plugin</artifactId>
-                    <version>0.15.7</version>
+                    <version>0.17.2</version>
                     <configuration>
                         <oldVersion>
                             <dependency>
@@ -308,6 +315,7 @@
                 <plugin>
                     <groupId>org.owasp</groupId>
                     <artifactId>dependency-check-maven</artifactId>
+                    <version>8.2.1</version>
                     <configuration>
                         <!-- no js is used in this project -->
                         <retireJsAnalyzerEnabled>false</retireJsAnalyzerEnabled>
@@ -360,3 +368,4 @@
         </profile>
     </profiles>
 </project>
+
