--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -90,6 +90,7 @@
             <!-- compile time annotation processor -->
             <groupId>com.google.auto.service</groupId>
             <artifactId>auto-service</artifactId>
+            <version>1.1.1</version>
             <optional>true</optional>
         </dependency>
 
