--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <snakeyaml.version>2.0</snakeyaml.version>
         <bouncycastle.version>1.70</bouncycastle.version>
         <jjwt.version>0.11.5</jjwt.version>
-        <okta.sdk.previousVersion>8.2.2</okta.sdk.previousVersion>
+        <okta.sdk.previousVersion>8.2.3</okta.sdk.previousVersion>
         <okta.commons.version>1.3.3</okta.commons.version>
 
         <github.slug>okta/okta-sdk-java</github.slug>
@@ -417,6 +417,7 @@
                 <plugin>
                     <groupId>org.owasp</groupId>
                     <artifactId>dependency-check-maven</artifactId>
+                    <version>8.2.1</version>
                     <configuration>
                         <!-- no js is used in this project -->
                         <retireJsAnalyzerEnabled>false</retireJsAnalyzerEnabled>
