--- a/pom.xml
+++ b/pom.xml
@@ -178,7 +178,12 @@
                 <version>1.1.0</version>
                 <optional>true</optional>
             </dependency>
-
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>32.0.1-jre</version>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <groupId>org.testng</groupId>
                 <artifactId>testng</artifactId>
