--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <org.apache.httpcomponents.client5.version>5.2.1</org.apache.httpcomponents.client5.version>
         <okta.sdk.previousVersion>11.0.3</okta.sdk.previousVersion>
         <okta.commons.version>1.3.3</okta.commons.version>
+        <com.google.auto.service.version>1.1.1</com.google.auto.service.version>
         <github.slug>okta/okta-sdk-java</github.slug>
     </properties>
 
@@ -175,10 +176,15 @@
             <dependency>
                 <groupId>com.google.auto.service</groupId>
                 <artifactId>auto-service</artifactId>
-                <version>1.1.0</version>
+                <version>${com.google.auto.service.version}</version>
                 <optional>true</optional>
             </dependency>
-
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>32.0.1-jre</version>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <groupId>org.testng</groupId>
                 <artifactId>testng</artifactId>
