--- a/examples/quickstart/pom.xml
+++ b/examples/quickstart/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>com.okta.sdk</groupId>
         <artifactId>okta-sdk-examples</artifactId>
-        <version>12.0.1-SNAPSHOT</version>
+        <version>12.0.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
