--- a/api/pom.xml
+++ b/api/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>com.okta.sdk</groupId>
         <artifactId>okta-sdk-root</artifactId>
-        <version>12.0.2-SNAPSHOT</version>
+        <version>13.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>okta-sdk-api</artifactId>
@@ -170,6 +170,10 @@
                         <configuration>
                             <inputSpec>${project.basedir}/../src/swagger/api.yaml</inputSpec>
                             <generatorName>java</generatorName>
+                            <packageName>com.okta.sdk.resource</packageName>
+                            <apiPackage>com.okta.sdk.resource.api</apiPackage>
+                            <modelPackage>com.okta.sdk.resource.model</modelPackage>
+                            <invokerPackage>com.okta.sdk.resource.handler</invokerPackage>
                             <configOptions>
                                 <sourceFolder>src/gen/java/main</sourceFolder>
                                 <useRuntimeException>true</useRuntimeException>
