--- a/api/pom.xml
+++ b/api/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>com.okta.sdk</groupId>
         <artifactId>okta-sdk-root</artifactId>
-        <version>12.0.3-SNAPSHOT</version>
+        <version>13.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>okta-sdk-api</artifactId>
@@ -36,7 +36,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <swagger-annotations.version>1.6.8</swagger-annotations.version>
-        <openapi-generator.version>6.4.0</openapi-generator.version>
+        <openapi-generator.version>6.6.0</openapi-generator.version>
         <spring-web.version>5.3.23</spring-web.version>
         <spring-retry.version>1.3.3</spring-retry.version>
         <jackson-databind-nullable.version>0.2.6</jackson-databind-nullable.version>
@@ -170,6 +170,10 @@
                         <configuration>
                             <inputSpec>${project.basedir}/../src/swagger/api.yaml</inputSpec>
                             <generatorName>java</generatorName>
+                            <packageName>com.okta.sdk.resource</packageName>
+                            <apiPackage>com.okta.sdk.resource.api</apiPackage>
+                            <modelPackage>com.okta.sdk.resource.model</modelPackage>
+                            <invokerPackage>com.okta.sdk.resource.client</invokerPackage>
                             <configOptions>
                                 <sourceFolder>src/gen/java/main</sourceFolder>
                                 <useRuntimeException>true</useRuntimeException>
