--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,19 @@ jobs:
     resource_class: large
     parallelism: 3
     steps: *build_steps
+  
+  snyk-scan:
+    docker:
+      - image: cimg/openjdk:13.0
+    steps:
+      - attach_workspace: # Allows for sharing of build-workspace (containing downloaded dependencies) (optional)
+          at: ~/project
+      - platform-helpers-general/step-load-dependencies
+      - run: | # Install your projects dependencies here or in the build job. Note: Here if Python.
+          pip install -r requirements.txt 
+      - platform-helpers-general/step-run-snyk-monitor:
+          scan-all-projects: true
+          skip-unresolved: false
 
 workflows:
   "Circle CI Tests":
@@ -68,6 +81,14 @@ workflows:
       - jdk17:
           requires:
             - cache-secrets
+      - platform-helpers-general/job-snyk-prepare:
+          name: prepare-snyk
+          requires:
+            - build
+      - snyk-scan:
+          name: execute-snyk
+          requires:
+            - prepare-snyk
   # See OKTA-634437
   semgrep:
     jobs:
