save workspace alias

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,13 +24,12 @@ aliases:
     - run:
         when: on_fail
         command: cat integration-tests/target/failsafe-reports/*dump*
-    - when:
-        condition: << parameters.save_workspace >>
-        steps:
-          - persist_to_workspace:
-              root: ~/project
-              paths:
-                - .
+
+  - &save_workspace
+    - persist_to_workspace:
+      root: ~/project
+      paths:
+        - .
 
 jobs:
   jdk8:
@@ -40,11 +39,9 @@ jobs:
       JVM_OPTS: -Xmx3200m
     resource_class: large
     parallelism: 3
-    parameters:
-      save_workspace:
-        type: boolean
-        default: true
-    steps: *build_steps
+    steps:
+      - *build_steps
+      - *save_workspace
 
   jdk11:
     docker:
