--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -22901,7 +22901,6 @@ components:
           BOOKMARK: '#/components/schemas/BookmarkApplication'
           BROWSER_PLUGIN: '#/components/schemas/BrowserPluginApplication'
           OPENID_CONNECT: '#/components/schemas/OpenIdConnectApplication'
-          SAML_1_1: '#/components/schemas/SamlApplication'
           SAML_2_0: '#/components/schemas/SamlApplication'
           SECURE_PASSWORD_STORE: '#/components/schemas/SecurePasswordStoreApplication'
           WS_FEDERATION: '#/components/schemas/WsFederationApplication'
@@ -28804,6 +28803,7 @@ components:
         - IDP_DISCOVERY
         - MFA_ENROLL
         - OKTA_SIGN_ON
+        - OAUTH_AUTHORIZATION_POLICY
         - PASSWORD
         - PROFILE_ENROLLMENT
     PolicyUserNameTemplate:
