Fix issue #972 - IdentityProviderApi cannot properly deserialize /ipds response

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -26122,10 +26122,8 @@ components:
         - DELTA_CRL
         - OCSP
     IdentityProviderPolicy:
-      allOf:
-        - $ref: '#/components/schemas/Policy'
-        - type: object
-          properties:
+       type: object
+       properties:
             accountLink:
               $ref: '#/components/schemas/PolicyAccountLink'
             conditions:
