--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -88,6 +88,18 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>com.atlassian.oai</groupId>
+            <artifactId>swagger-request-validator-core</artifactId>
+            <version>2.40.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
         <!-- Test deps -->
         <dependency>
             <groupId>org.mockito</groupId>
